<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.house.HouseDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/add_your_house_details"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textFontWeight="700" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                <TextView
                    android:id="@+id/tenant_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/tenant_name"
                    android:fontFamily="@font/inter"
                    android:textFontWeight="500"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/tenant_name_textfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/tenant_name"
                    android:inputType="text"
                    android:background="@drawable/textfield_bg"
                    android:padding="12dp"
                    android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                <TextView
                    android:id="@+id/tenant_number_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/tenant_number"
                    android:fontFamily="@font/inter"
                    android:textFontWeight="500"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/tenant_number_textfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/tenant_number"
                    android:inputType="phone"
                    android:background="@drawable/textfield_bg"
                    android:padding="12dp"
                    android:textSize="18sp" />
                    </LinearLayout>
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                    android:id="@+id/landlord_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/landlord_name"
                    android:fontFamily="@font/inter"
                    android:textFontWeight="500"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/landlord_name_textfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/landlord_name"
                    android:inputType="text"
                    android:background="@drawable/textfield_bg"
                    android:padding="12dp"
                    android:textSize="18sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                <TextView
                    android:id="@+id/landlord_number_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/landlord_number"
                    android:fontFamily="@font/inter"
                    android:textFontWeight="500"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/landlord_number_textfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/landlord_number"
                    android:inputType="phone"
                    android:background="@drawable/textfield_bg"
                    android:padding="12dp"
                    android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
                <TextView
                    android:id="@+id/address_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/address"
                    android:fontFamily="@font/inter"
                    android:textFontWeight="500"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/address_textfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:background="@drawable/textfield_bg"
                    android:padding="12dp"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/description_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/description"
                    android:fontFamily="@font/inter"
                    android:textFontWeight="500"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/description_textfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/description"
                    android:inputType="text"
                    android:background="@drawable/textfield_bg"
                    android:padding="12dp"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/rent_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/rent"
                    android:fontFamily="@font/inter"
                    android:textFontWeight="500"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/rent_textfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/rent"
                    android:inputType="number"
                    android:background="@drawable/textfield_bg"
                    android:padding="12dp"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/images_btn"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/textfield_bg"
                    android:padding="8dp"
                    android:text="@string/add_images"
                    android:textColor="#78DEC7"/>
                <TextView
                    android:id="@+id/images_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/rent"
                    android:visibility="gone"
                    android:fontFamily="@font/inter"
                    android:textFontWeight="600"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
                <Button
                    android:id="@+id/submit_btn"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:background="#78DEC7"
                    android:padding="8dp"
                    android:text="@string/save"
                    android:textColor="@color/white"/>

                <ProgressBar
                    android:id="@+id/loader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </ScrollView>

</RelativeLayout>